<resources>
    <string name="novia">Novia</string>
    <string name="title_home">Home</string>
    <string name="sos_button">Tombol SOS</string>
    <string name="chat_aduan">Chat Aduan</string>
    <string name="sos">SOS</string>
    <string name="novia_logo">Logo Novia</string>
    <string name="settings">Pengaturan</string>
    <string name="user_profile_picture">Gambar profil pengguna</string>
    <string name="novia_novia_com">novia@novia.com</string>
    <string name="back_button">Tombol Kembali</string>
    <string name="halo_username">Hai, Username</string>
    <string name="semoga_anda_sehat_selalu">Semoga Anda sehat selalu!</string>
    <string name="tips_trik"><![CDATA[Tips & Trik]]></string>
    <string name="preventif_apabila_mendapat_tindakan_asusila">Preventif apabila mendapat perlakuan asusila</string>
    <string name="berita">Berita</string>
    <string name="layanan_sos">Layanan SOS</string>
    <string name="pilih_opsi_yang_ingin_segera_dilakukan">Pilih opsi yang ingin segera Anda lakukan</string>
    <string name="gawat_darurat">Panggilan Darurat</string>
    <string name="kirim_sms_blast">Kirim SMS Blast</string>
    <string name="kontak_kerabat">Daftar Kontak</string>
    <string name="anda_terhubung_dengan_bot">Anda terhubung dengan bot</string>
    <string name="contact_list">Daftar Kontak</string>
    <string name="tambahkan_kontak_kerabat">Tambahkan kontak kerabat terdekat Anda</string>
    <string name="sebarkan_pesan_darurat">Sebarkan pesan teks darurat ke seluruh daftar kontak kerabat Anda</string>
    <string name="add_contact">Tambah kontak </string>
    <string name="submit">Simpan</string>
    <string name="name">Nama</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="selamat_datang">Selamat datang di Novia!</string>
    <string name="register">Daftar</string>
    <string name="register_now">Daftar sekarang</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar dari akun</string>
    <string name="login_description">Silakan log masuk dengan akun Anda</string>
    <string name="login_question">Belum memiliki akun? <b>Daftar sekarang!</b></string>
    <string name="register_description">Mari bergabung bersama Novia!</string>
    <string name="register_question">Dengan mendaftar, Anda menyetujui <b>syarat dan kebijakan</b> layanan Novia.</string>
    <string name="welcome_description">Aplikasi cepat tanggap untuk pelaporan tindakan kekerasan dan asusila</string>
    <string name="email">E-mail</string>
    <string name="password">Kata sandi</string>
    <string name="phone">Nomor ponsel</string>
    <string name="address">Alamat rumah</string>
    <string name="send_icon">Icon Kirim</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="stop_location_updates_button_text">Stop Location Updates</string>
    <string name="no_location_text">No Location</string>
    <string name="preference_file_key">com.app.novia.PREFERENCE_FILE_KEY</string>
    <string name="emergency">Darurat</string>
    <string name="emergency_phone">112</string>
    <string name="sapa">SAPA</string>
    <string name="sapa_phone">129</string>
    <string name="polisi">Polisi</string>
    <string name="polisi_phone">110</string>
    <string name="ambulans">Ambulans</string>
    <string name="ambulans_phone">119</string>
    <string name="pesan">Pesan…</string>
    <string name="gambar_berita">Gambar berita</string>
    <string name="ayah_penganiaya_anak_kandung_di_tangsel_ditangkap">Ayah Penganiaya Anak Kandung di Tangsel Ditangkap</string>
    <string name="bayu_nugraha_mohammad_yudha_prasetya_viva_com">Bayu Nugraha, Mohammad Yudha Prasetya - Viva.com</string>
    <string name="_20_mei_2021">20 Mei 2021</string>
    <string name="baca_lebih_lanjut">Baca lebih lanjut</string>
    <string name="viva_pihak_kepolisian_sektor_serpong_polres_tangerang_selatan_mengamankan_pelaku_penganiayaan_terhadap_seorang_anak_di_jalan_pondok_jagung_kecamatan_serpong_kota_tangerang_selatan_r_ndikonfirmasi">VIVA Pihak Kepolisian Sektor Serpong, Polres Tangerang Selatan, mengamankan pelaku penganiayaan terhadap seorang anak di Jalan Pondok Jagung, Kecamatan Serpong, Kota Tangerang Selatan.</string>
    <string name="banner_ask">Kami siap mendengarmu</string>
    <string name="banner_ask2">#SaatnyaBersuara ></string>
    <string name="next_button">Next Button</string>
    <string name="chatbot_banner">Chatbot Banner</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="gambar_tips_dan_trik">Gambar tips dan trik</string>
    <string name="lorem_ipsum_dolor_sit_amet_blabla_consectum">Lorem ipsum dolor sit amet blabla consectum</string>
    <string name="gambar_telepon_sapa">Gambar Telepon SAPA</string>
    <string name="gambar_telepon_darurat_112">Gambar Telepon Darurat 112</string>
    <string name="gambar_telepon_polisi_110">Gambar Telepon Polisi 110</string>
    <string name="gambar_telepon_ambulans_119">Gambar Telepon Ambulans 119</string>
    <string name="buat_sms_blast">Buat SMS Blast</string>
    <string name="buka_daftar_kontak_sos">Buka Daftar Kontak SOS</string>
</resources>