<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcomepage.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="98dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:contentDescription="@string/novia_logo"
            android:maxWidth="98dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/login_title"
            style="@style/Text.Header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_message"
            style="@style/Text.Header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="88dp"
            android:text="@string/login_description" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="45dp"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_question"
            style="@style/Text.Header4"
            android:layout_marginBottom="44dp"
            android:text="@string/login_question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_card_first" />

    </LinearLayout>

</RelativeLayout>