<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NewsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/news_backbutton_imageview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="345dp"
                android:layout_height="194dp"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/activitynews_imageview"
                    android:layout_width="345dp"
                    android:layout_height="194dp"
                    android:contentDescription="@string/gambar_berita"
                    android:src="@color/novia_purple" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activitynews_judul_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/ayah_penganiaya_anak_kandung_di_tangsel_ditangkap"
                android:textColor="@color/novia_purple"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activitynews_source_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/bayu_nugraha_mohammad_yudha_prasetya_viva_com"
                android:textColor="@color/novia_blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activitynews_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_20_mei_2021"
                android:textColor="#979797"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/activitynews_content_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="30dp"
                android:text="@string/viva_pihak_kepolisian_sektor_serpong_polres_tangerang_selatan_mengamankan_pelaku_penganiayaan_terhadap_seorang_anak_di_jalan_pondok_jagung_kecamatan_serpong_kota_tangerang_selatan_r_ndikonfirmasi"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activitynews_baca_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:text="@string/baca_lebih_lanjut"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>