<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.novia.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_chatbot"
            app:destination="@id/navigation_chatbot" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_sos"
            app:destination="@id/navigation_sos" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sos"
        android:name="com.app.novia.ui.sos.SosFragment"
        android:label="@string/sos"
        tools:layout="@layout/fragment_sos" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.app.novia.ui.chatbot.ChatFragment"
        android:label="@string/chat_aduan"
        tools:layout="@layout/fragment_chatbot" />

</navigation>