<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.welcomeactivities.WelcomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="98dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:contentDescription="@string/novia_logo"
            android:maxWidth="98dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcome_title"
            style="@style/Text.Header1"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:lineSpacingExtra="-11sp"
            android:text="@string/selamat_datang" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/next_button"
        android:src="@drawable/ic_baseline_arrow_right" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_baseline_arrow_left" />

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@id/viewPager"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:ci_drawable="@drawable/indicator_color" />

    <TextView
        android:id="@+id/home_greetings_message"
        style="@style/Text.Header2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:lineSpacingExtra="-2sp"
        android:text="@string/welcome_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterPage"
            style="@style/Text2"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:background="@drawable/button_style_2"
            android:letterSpacing="0.05"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginPage"
            style="@style/Text2"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:background="@drawable/button_style_1"
            android:letterSpacing="0.05"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>