<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <TextView
            android:id="@+id/sos_title_text"
            style="@style/Text.Header1"
            android:text="@string/layanan_sos"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sos_title_text_message"
            style="@style/Text.Header2"
            android:text="@string/pilih_opsi_yang_ingin_segera_dilakukan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sos_title_text" />

        <TextView
            android:id="@+id/sos_gawat_darurat"
            style="@style/Text.Header3"
            android:layout_marginTop="48dp"
            android:text="@string/gawat_darurat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sos_title_text_message" />

        <TextView
            android:id="@+id/sos_kirim_sms"
            style="@style/Text.Header3"
            android:layout_marginTop="48dp"
            android:text="@string/kirim_sms_blast"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sos_gawat_darurat" />

        <TextView
            android:id="@+id/sos_kontak_kerabat"
            style="@style/Text.Header3"
            android:layout_marginTop="48dp"
            android:text="@string/kontak_kerabat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sos_kirim_sms" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>