<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />

        <TextView
            android:id="@+id/home_greetings_name"
            style="@style/Text.Header1"
            android:layout_height="45dp"
            android:text="@string/halo_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_greetings_message"
            style="@style/Text.Header2"
            android:text="@string/semoga_anda_sehat_selalu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_greetings_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/home_card_first"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="25dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toLeftOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/home_greetings_message" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/gradient_1" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/icon_sapa" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/home_tips_trik_title"
            style="@style/Text.Header3"
            android:layout_marginTop="35dp"
            android:text="@string/tips_trik"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_card_first" />

        <TextView
            android:id="@+id/home_tips_trik_title_message"
            style="@style/Text.Paragraph"
            android:text="@string/preventif_apabila_mendapat_tindakan_asusila"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_tips_trik_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTipsTrik"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toLeftOf="@id/guideline_right"
            tools:listitem="@layout/item_tips_trik"
            app:layout_constraintTop_toBottomOf="@id/home_tips_trik_title_message" />

        <TextView
            android:id="@+id/home_berita_title"
            style="@style/Text.Header3"
            android:layout_marginTop="35dp"
            android:text="@string/berita"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvTipsTrik" />

        <androidx.cardview.widget.CardView
            android:id="@+id/home_card_fifth"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintLeft_toRightOf="@id/guideline_left"
            app:layout_constraintRight_toLeftOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/home_berita_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>