<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contactlist.ContactListActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/contact_list_btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text.Header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/contact_list"
        android:textSize="26sp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        app:layout_constraintStart_toEndOf="@id/contact_list_btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/contact_list_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintBottom_toTopOf="@id/contact_list_fab_add"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/contact_list_fab_add"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="25dp"
        android:contentDescription="@string/sos_button"
        android:src="@drawable/ic_baseline_add_24"
        android:translationZ="10dp"
        app:fabCustomSize="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:maxImageSize="40dp"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>